--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src test",
     "test": "mocha --compilers js:babel-register test/unit/**/*.spec.js",
-    "coverage": "nyc npm test",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "test:helper": "babel-node index.js"
   },
   "author": "James W. Lane",
@@ -17,6 +17,7 @@
     "babel-register": "^6.24.1",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
+    "coveralls": "^2.13.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-immutable": "^1.0.0",
