--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-.idea
-.nyc_output
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage directory used by tools like istanbul
 coverage
-node_modules
+
+# Compiled source
+lib
+
+# Dependency directories
+node_modules/
+
+# JetBrains settings
+.idea
