--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "lint": "eslint src test",
     "test": "mocha --compilers js:babel-register test/unit/**/*.spec.js",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "test:helper": "babel-node index.js"
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov",
+    "test:helper": "babel-node index.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "author": "James W. Lane",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "chai": "^4.0.1",
     "chalk": "^2.0.0",
     "coveralls": "^3.0.0",
+    "cz-conventional-changelog": "2.1.0",
     "eslint": "^4.1.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-immutable": "^1.0.0",
@@ -26,6 +28,12 @@
     "eslint-plugin-react": "^7.0.0",
     "mocha": "^4.0.0",
     "nyc": "^11.0.2",
-    "sinon": "^4.0.1"
+    "sinon": "^4.0.1",
+    "semantic-release": "8.2.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
