--- a/package.json
+++ b/package.json
@@ -4,32 +4,38 @@
   "description": "helper",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src test",
-    "test": "mocha --compilers js:babel-register test/unit/**/*.spec.js",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov",
+    "eslint": "eslint src test",
+    "eslint:fix": "eslint --fix src test",
+    "test": "jest --coverage",
     "test:helper": "babel-node index.js",
+    "verify": "yarn verify:npmvet && yarn verify:david && yarn verify:nsp && yarn eslint && yarn test",
+    "verify:npmvet": "npmvet --renderer ci --strict",
+    "verify:david": "david",
+    "verify:nsp": "nsp check --output summary",
+    "verify:check": "depcheck",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "author": "James W. Lane",
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "chai": "^4.0.1",
-    "chalk": "^2.0.0",
-    "coveralls": "^3.0.0",
+    "babel-jest": "21.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-preset-es2017": "6.24.1",
+    "babel-register": "6.26.0",
+    "chai": "4.1.2",
+    "chalk": "2.3.0",
+    "coveralls": "3.0.0",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "^4.1.0",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-plugin-immutable": "^1.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.0",
-    "eslint-plugin-react": "^7.0.0",
-    "mocha": "^4.0.0",
-    "nyc": "^11.0.2",
-    "sinon": "^4.0.1",
-    "semantic-release": "8.2.0"
+    "eslint": "4.10.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-immutable": "1.0.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
+    "jest": "21.2.1",
+    "regenerator-runtime": "0.11.0",
+    "semantic-release": "8.2.0",
+    "sinon": "4.1.2"
   },
   "config": {
     "commitizen": {
