--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ after_script:
 script:
 - yarn verify
 after_success:
-- npm run semantic-release
+- yarn ts:build
+- yarn semantic-release
 - cat ./coverage/lcov.info | coveralls
 branches:
   except:
