chore(Structure): Updated repo structure

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "helper-utility",
   "version": "0.0.0-development",
   "description": "helper utility",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:jameswlane/helper-utility.git"
@@ -15,38 +15,53 @@
   },
   "homepage": "https://github.com/jameswlane/helper-utility#readme",
   "scripts": {
-    "eslint": "eslint src test",
-    "eslint:fix": "eslint --fix src test",
+    "clean": "rimraf lib coverage",
+    "commit": "git-cz",
+    "commitmsg": "opt --in commit-msg --exec \"validate-commit-msg\"",
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors generate",
+    "coverage:report": "coveralls",
+    "precommit": "lint-staged && opt --in pre-commit --exec \"yarn verify\"",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "setup": "npm i -g npmvet david nsp depcheck types-checker commitizen semantic-release-cli all-contributors-cli",
     "test": "jest --coverage",
-    "test:helper": "babel-node index.js",
-    "verify": "yarn verify:npmvet && yarn verify:david && yarn verify:nsp && yarn eslint && yarn test",
-    "verify:npmvet": "npmvet --renderer ci --strict",
-    "verify:david": "david",
-    "verify:nsp": "nsp check --output summary",
+    "test:ci": "jest --coverage --maxWorkers=4",
+    "test:watch": "jest --watch",
+    "ts:build": "tsc",
+    "ts:watch": "tsc -w",
+    "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts\"",
+    "tslint:fix": "tslint --config tslint.json --project tsconfig.json --fix \"src/**/*.ts\"",
+    "verify": "yarn verify:npmvet && yarn verify:david && yarn verify:nsp && yarn verify:tscheck && yarn tslint && yarn test",
+    "verify:offline": "yarn verify:npmvet && yarn tslint && yarn test",
+    "verify:ci": "yarn verify:npmvet && yarn verify:nsp && yarn tslint && yarn test:ci",
     "verify:check": "depcheck",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "verify:david": "david",
+    "verify:npmvet": "npmvet --renderer ci --strict",
+    "verify:nsp": "nsp check --output summary",
+    "verify:tscheck": "types-checker"
   },
+  "files": [
+    "lib/"
+  ],
   "author": "James W. Lane",
   "license": "MIT",
   "devDependencies": {
-    "babel-jest": "21.2.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
-    "babel-preset-es2017": "6.24.1",
-    "babel-register": "6.26.0",
-    "chai": "4.1.2",
-    "chalk": "2.3.0",
+    "@types/node": "8.0.53",
+    "all-contributors-cli": "4.10.0",
+    "awesome-typescript-loader": "3.4.0",
+    "commitizen": "2.9.6",
     "coveralls": "3.0.0",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "4.12.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-plugin-immutable": "1.0.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.5.1",
     "jest": "21.2.1",
-    "regenerator-runtime": "0.11.0",
+    "lint-staged": "5.0.0",
+    "opt-cli": "1.6.0",
+    "rimraf": "2.6.2",
     "semantic-release": "8.2.0",
-    "sinon": "4.1.2"
+    "ts-jest": "21.2.3",
+    "tslint": "5.8.0",
+    "tslint-config-airbnb": "5.4.2",
+    "typescript": "2.6.1",
+    "validate-commit-msg": "2.14.0"
   },
   "config": {
     "commitizen": {
