--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
 - greenkeeper-lockfile-update
 after_script:
 - greenkeeper-lockfile-upload
+- echo $TRAVIS_NODE_VERSION
 script:
 - yarn verify
 after_success:
