--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 - greenkeeper-lockfile-update
 after_script:
 - greenkeeper-lockfile-upload
-- echo "$TRAVIS_NODE_VERSION"
+- if [[ "$TRAVIS_NODE_VERSION" == "8" ]]; then echo "This is version 8"; fi
 script:
 - yarn verify
 after_success:
