--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ before_script:
 - greenkeeper-lockfile-update
 after_script:
 - greenkeeper-lockfile-upload
-- if [[ "$TRAVIS_NODE_VERSION" == "8" ]]; then echo "This is version 8"; fi
 script:
 - yarn verify
 after_success:
 - yarn ts:build
 - yarn semantic-release
+- if [ "$TRAVIS_NODE_VERSION" == "8" ]; then echo "This is version 8"; fi;
 - cat ./coverage/lcov.info | coveralls
 branches:
   except:
