--- a/.travis.yml
+++ b/.travis.yml
@@ -10,58 +10,49 @@ os:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
   - export PATH="$HOME/.yarn/bin:$PATH"
-  - yarn global add greenkeeper-lockfile@1
 cache:
   yarn: true
   directories:
   - "~/.npm"
 notifications:
   email: false
-before_script:
-  - yarn global add npmvet david nsp depcheck types-checker
-  - greenkeeper-lockfile-update
-after_script:
-  - greenkeeper-lockfile-upload
 script:
   - yarn test:ci
 jobs:
   include:
     - stage: NPM Vet
       node_js: "8"
-      script:
-        - echo "Vetting npm package versions..."
-        - yarn verify:npmvet
+      before_script:
+        - yarn global add npmvet
+      script: yarn verify:npmvet
     - stage: Node Security
       node_js: "8"
-      script:
-        - echo echo "Checking for known vulnerabilities in the project..."
-        - yarn verify:nsp
+      before_script:
+        - yarn global add nsp
+      script: yarn verify:nsp
     - stage: TSLint
       node_js: "8"
-      script:
-        - echo "Running TSLint..."
-        - yarn tslint
-    - stage: Building
-      node_js: "8"
-      script:
-        - echo "Running TypeScript build..."
-        - ls
-      after_success:
-        - yarn ts:build
+      script: yarn tslint
     - stage: Code Coverage
       node_js: "8"
-      script:
-        - echo "Sending coverage report to coveralls..."
-        - ls
+      script: yarn test:coverage:ci
       after_success:
         - cat ./coverage/lcov.info | coveralls
-    - stage: NPM Release
+    - stage: Building
       node_js: "8"
+      before_install:
+        - yarn global add greenkeeper-lockfile@1
+      before_script:
+        - greenkeeper-lockfile-update
       script:
-      - echo "Deploying to npm..."
-      - ls
-      after_success:
-        - yarn semantic-release
+        - yarn ts:build
+      after_script:
+        - greenkeeper-lockfile-upload
+      deploy:
+        provider: script
+        script: yarn semantic-release
+        on:
+          branch: master
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
