--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,8 @@ jobs:
         - yarn ts:build
       after_script:
         - greenkeeper-lockfile-upload
-      deploy:
-        provider: script
-        script: yarn semantic-release
-        on:
-          branch: master
+      after_success:
+        - yarn semantic-release
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
