--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "jest --coverage",
     "test:ci": "jest --maxWorkers=4",
     "test:coverage:ci": "jest --coverage --maxWorkers=4",
+    "test:coverage:codecov": "codecov",
     "test:watch": "jest --watch",
     "ts:build": "tsc",
     "ts:watch": "tsc -w",
@@ -50,6 +51,7 @@
     "@types/node": "9.3.0",
     "all-contributors-cli": "4.10.1",
     "awesome-typescript-loader": "3.4.1",
+    "codecov": "^3.0.0",
     "commitizen": "2.9.6",
     "coveralls": "3.0.0",
     "cz-conventional-changelog": "2.1.0",
