--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@types/node": "9.3.0",
     "all-contributors-cli": "4.10.1",
     "awesome-typescript-loader": "3.4.1",
-    "codecov": "^3.0.0",
+    "codecov": "3.0.0",
     "commitizen": "2.9.6",
     "coveralls": "3.0.0",
     "cz-conventional-changelog": "2.1.0",
