build(nsp): Replaced nsp with npm audit

--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
   },
   "homepage": "https://github.com/jameswlane/helper-utility#readme",
   "scripts": {
+    "audit": "npm audit",
+    "audit:fix": "npm audit fix",
     "clean": "rimraf lib coverage",
     "commit": "git-cz",
     "commitmsg": "opt --in commit-msg --exec \"validate-commit-msg\"",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "coverage:report": "coveralls",
-    "precommit": "lint-staged && opt --in pre-commit --exec \"yarn verify\"",
+    "precommit": "lint-staged && opt --in pre-commit --exec \"npm run verify\"",
     "semantic-release": "semantic-release",
-    "setup": "npm i -g npmvet david nsp depcheck types-checker commitizen semantic-release-cli all-contributors-cli",
+    "setup": "npm i -g npmvet david depcheck types-checker commitizen semantic-release-cli all-contributors-cli",
     "test": "jest --coverage",
     "test:ci": "jest --maxWorkers=4",
     "test:coverage:ci": "jest --coverage --maxWorkers=4",
@@ -33,13 +35,12 @@
     "ts:watch": "tsc -w",
     "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts\"",
     "tslint:fix": "tslint --config tslint.json --project tsconfig.json --fix \"src/**/*.ts\"",
-    "verify": "yarn verify:npmvet && yarn verify:david && yarn verify:nsp && yarn verify:tscheck && yarn tslint && yarn test",
-    "verify:offline": "yarn verify:npmvet && yarn tslint && yarn test",
-    "verify:ci": "yarn verify:npmvet && yarn verify:nsp && yarn tslint && yarn test:ci",
+    "verify": "npm run verify:npmvet && npm run verify:david && npm run audit:fix && npm run verify:tscheck && npm run tslint && npm run test",
+    "verify:offline": "npm run verify:npmvet && npm run tslint && npm run test",
+    "verify:ci": "npm run verify:npmvet && npm run audit:fix && npm run tslint && npm run test:ci",
     "verify:check": "depcheck",
     "verify:david": "david",
     "verify:npmvet": "npmvet --renderer ci --strict",
-    "verify:nsp": "nsp check --output summary",
     "verify:tscheck": "types-checker"
   },
   "files": [
