--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "awesome-typescript-loader": "5.2.1",
     "codecov": "3.2.0",
     "commitizen": "3.0.5",
-    "coveralls": "3.0.2",
+    "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "jest": "24.1.0",
     "lint-staged": "^8.1.4",
