--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "all-contributors-cli": "^6.1.2",
     "awesome-typescript-loader": "5.2.1",
     "codecov": "3.2.0",
-    "commitizen": "3.0.5",
+    "commitizen": "^3.0.7",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "jest": "24.1.0",
