--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "opt-cli": "1.6.0",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.3",
-    "ts-jest": "23.10.5",
+    "ts-jest": "^24.0.0",
     "tslint": "5.12.1",
     "tslint-config-airbnb": "5.11.1",
     "typescript": "3.3.3",
