--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "ts-jest": "^24.0.0",
     "tslint": "5.12.1",
     "tslint-config-airbnb": "5.11.1",
-    "typescript": "3.3.3",
+    "typescript": "^3.3.3333",
     "validate-commit-msg": "2.14.0"
   },
   "config": {
