--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "rimraf": "2.6.3",
     "semantic-release": "15.13.3",
     "ts-jest": "^24.0.0",
-    "tslint": "5.12.1",
+    "tslint": "^5.13.0",
     "tslint-config-airbnb": "5.11.1",
     "typescript": "^3.3.3333",
     "validate-commit-msg": "2.14.0"
