--- a/package.json
+++ b/package.json
@@ -49,22 +49,27 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "10.12.18",
-    "all-contributors-cli": "^6.1.2",
+    "all-contributors-cli": "6.1.2",
     "awesome-typescript-loader": "5.2.1",
     "codecov": "3.2.0",
-    "commitizen": "^3.0.7",
-    "coveralls": "^3.0.3",
+    "commitizen": "3.0.7",
+    "coveralls": "3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "jest": "24.1.0",
-    "lint-staged": "^8.1.4",
+    "lint-staged": "8.1.4",
     "opt-cli": "1.6.0",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.3",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.13.0",
+    "ts-jest": "24.0.0",
+    "tslint": "5.13.0",
     "tslint-config-airbnb": "5.11.1",
-    "typescript": "^3.3.3333",
+    "typescript": "3.3.3333",
     "validate-commit-msg": "2.14.0"
+  },
+  "david": {
+    "ignore": [
+      "@types/node"
+    ]
   },
   "config": {
     "commitizen": {
