--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "lint-staged": "8.1.4",
     "opt-cli": "1.6.0",
     "rimraf": "2.6.3",
-    "semantic-release": "15.13.3",
+    "semantic-release": "15.13.4",
     "ts-jest": "24.0.0",
     "tslint": "5.13.0",
     "tslint-config-airbnb": "5.11.1",
+    "types-checker": "0.0.9",
     "typescript": "3.3.3333",
     "validate-commit-msg": "2.14.0"
   },
