--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cz-conventional-changelog": "2.1.0",
     "jest": "24.1.0",
     "lint-staged": "8.1.4",
+    "npmvet": "0.1.5",
     "opt-cli": "1.6.0",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.4",
