--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,18 +157,18 @@ workflows:
       - test-node-10:
           requires:
             - tslint
-      - test-node-11:
-          requires:
-            - tslint
-      - test-node-12:
-          requires:
-            - tslint
+#      - test-node-11:
+#          requires:
+#            - tslint
+#      - test-node-12:
+#          requires:
+#            - tslint
       - coverage:
           requires:
             - test-node-8
             - test-node-10
-            - test-node-11
-            - test-node-12
+#            - test-node-11
+#            - test-node-12
       - build-typescript:
           requires:
             - coverage
