--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "12.7.5",
+    "@types/jest": "^24.0.18",
     "@types/rimraf": "2.0.2",
     "@types/semantic-release": "15.13.0",
     "all-contributors-cli": "6.9.1",
@@ -79,5 +80,6 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "dependencies": {}
 }
